...
    <string name="coordinate_mgrs">MGRS</string>
    <string name="declination">Declination</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="unknown">Unknown</string>
    <string name="description">Description</string>
    <string name="places">Places</string>
    <string name="tracks">Tracks</string>
    <string name="routes">Routes</string>
    <string name="explain">Explain</string>
    <string name="copyright">Copyright</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="credits">Credits</string>
...
    <string name="actionAbout">About</string>
    <string name="actionGotIt">Got it</string>
    <string name="actionEdit">Edit</string>
    <string name="actionShare">Share</string>
    <string name="actionView">View</string>
    <string name="actionContinue">Continue</string>
    <string name="actionNightMode">Night mode</string>
    <string name="actionLanguage">Language</string>
    <string name="actionManageMaps">Manage maps</string>
    <string name="actionAddPlaceHere">Add place</string>
    <string name="actionNavigateHere">Navigate here</string>
    <string name="actionNavigateReversed">Navigate reversed</string>
    <string name="actionFindRouteHere">Find route here</string>
...
    <string name="msgMapSelectionExplanation">Grey squares designate areas available for download. When map index is downloaded each square contains information about area map size and data age. If you check hillshades box then information about availability of hillshades for that area is also displayed and sizes are adjusted to incorporate hillshades. Bright green areas denote active (downloaded)
    <string name="msgMultipleMapsMode">Multi-maps mode enabled. Use double tap to show and hide maps.</string>
    <string name="msgEnableGps">You should enable precise location (GPS) in Android settings in order to use real time positioning</string>
    <string name="msgMapDownloadFailed">%s failed to download</string>
    <string name="msgTooFewRouteLegs">Route should contain at least one leg</string>

    <string name="introOfflineMapsTitle">Offline maps</string>
    <string name="introOfflineMaps">Lightweight offline vector maps contain detailed topological data with elevation contours and support hillshades. You can add custom maps to cover your area of interest. Custom maps will be shaded as well.</string>
    <string name="introPlacesTitle">Places</string>
    <string name="introPlaces">Places can be easily imported from GPX and KML files or can be created within application. You can navigate to points and share them with others.</string>
    <string name="introTracksTitle">Tracks</string>
    <string name="introTracks">You can record tracks of your journey. Just press a button when you start and press it once more when you finish. You can quit the application if you do not need to look at the map, the track will be recorded in the background.</string>
    <string name="introOffroadTitle">Off-road</string>
    <string name="introOffroad">Unpaved, dirt, winter and ice roads are specially visualized. 4wd only roads have specific marking. Fords are displayed on all roads, even primary.</string>
    <string name="introHikingTitle">Hiking</string>
    <string name="introHiking">Hiking activity mode emphasises paths and tracks. It visualizes path difficulty and visibility and shows hiking routes.</string>
    <string name="introCyclingTitle">Cycling</string>
    <string name="introCycling">Cycling activity mode reveals bicycle infrastructure. It shows cycling routes and visualizes mountain biking track difficulty and visibility.</string>
    <string name="introSkiingTitle">Skiing and skating</string>
    <string name="introSkiing">Skiing activity mode displays clean winter map with mostly all skiing activities: downhill, nordic, hiking and touring. As a bonus freestyle snow-boarding, skating and sleighing areas are displayed.</string>
    <string name="introNightModeTitle">Night mode</string>
    <string name="introNightMode">Simplified night map theme is designed to make long night journeys more comfortable.</string>

    <string name="advice_update_external_source">When you update imported data source only relevant data is saved, all unsupported properties will be lost</string>
    <string name="advice_sunrise_sunset">Sunrise and sunset time are local to their corresponding location</string>
...
