<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <org.oscim.android.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true" />

    <View
        android:id="@+id/popupAnchor"
...
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorAccentDarkest"
            android:textSize="9sp"
            android:transformPivotX="0px"
            android:transformPivotY="0px"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/actionPanel"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp"
            tools:text="@string/copyright"
            tools:visibility="visible" />

        <mobi.maptrek.view.GaugePanel
...
